# ntrix-vdc

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  PROTOCOL.md  README.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/runtime/: Cargo.toml  build.rs
rust/runtime/src/: font.rs  lib.rs
rust/sdk/: Cargo.toml
rust/sdk/src/: charcell.rs  com.rs  helpers.rs  lib.rs  prelude.rs
scripts/: build  compile_commands  setup
src/: CMakeLists.txt  main.c
