[package]
name = "ntrix-vdc-runtime"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]

[dependencies]
embassy-sync = "0.8.0"
ibm437 = { version = "0.5.0", default-features = false, features = [ "regular8x8" ] }
ntrix-vdc-sdk = { path = "../sdk" }

[build-dependencies]
cbindgen = "0.29.4"
